--- a/jetlag/compose.yaml
+++ b/jetlag/compose.yaml
@@ -8,7 +8,7 @@ services:
 #    ports:
 #      - "8080:3000"
     command: >
-      sh -c "npm install && npm run build && npm run preview"
+      sh -c "npm install --legacy-peer-deps && npm run build && npm run preview"
     security_opt:
       - no-new-privileges:true  # helps to increase security
     networks:
