--- a/crafty/compose.yaml
+++ b/crafty/compose.yaml
@@ -5,7 +5,7 @@ services:
     image: registry.gitlab.com/crafty-controller/crafty-4:4.7.0
     restart: unless-stopped
     environment:
-      - TZ=Etc/UTC
+      - TZ=America/New_York
     ports:
       - "8443:8443"  # HTTPS web u
 #      - "8123:8123"  # DYNMAP
