--- a/gluetun/compose.yaml
+++ b/gluetun/compose.yaml
@@ -12,7 +12,7 @@ services:
       - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
       - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
       - DNS_PLAINTEXT_ADDRESS=${DNS_PLAINTEXT_ADDRESS}
-      - SHADOWSOCKS_PASSWORD=${SHADOWSOCKS_PASSWORD}
+      #- SHADOWSOCKS_PASSWORD=${SHADOWSOCKS_PASSWORD}
       - WIREGUARD_PRESHARED_KEY=${WIREGUARD_PRESHARED_KEY}
       - FIREWALL_VPN_INPUT_PORTS=${TORRENTING_PORT}
       - VPN_TYPE=wireguard
