REQUIRE_AUTH=false

--- a/gluetun/compose.yaml
+++ b/gluetun/compose.yaml
@@ -99,9 +99,10 @@ services:
       - "traefik.http.routers.mullvad-secure.middlewares=tinyauth"
   go-socks5-proxy:
     image: serjs/go-socks5-proxy:v0.0.4
-    #environment:
-      #- PROXY_PASSWORD=${SHADOWSOCKS_PASSWORD}
-      #- PROXY_USER=socks5
+    environment:
+      - PROXY_PASSWORD=${SHADOWSOCKS_PASSWORD}
+      - PROXY_USER=socks5
+      - REQUIRE_AUTH=false
     ports:
       - 1080:1080
     container_name: socks5
