--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -935,3 +935,16 @@ linked_repo = "compose_main"
 run_directory = "jetlag"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/jetlag-holmie.env"
+
+##
+
+[[stack]]
+name = "dawarich-holmie"
+tags = ["holmie", "criticality: 5"]
+[stack.config]
+server = "holmie"
+project_name = "dawarich-holmie"
+linked_repo = "compose_main"
+run_directory = "dawarich"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/dawarich-holmie.env"
