--- a/dawarich/compose.yaml
+++ b/dawarich/compose.yaml
@@ -65,7 +65,7 @@ services:
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
       DATABASE_NAME: dawarich_development
       MIN_MINUTES_SPENT_IN_CITY: 60
-      APPLICATION_HOSTS: "localhost,::1,127.0.0.1"
+      APPLICATION_HOSTS: "dawarich.${DOMAIN}"
       TIME_ZONE: America/New_York
       APPLICATION_PROTOCOL: http
       PROMETHEUS_EXPORTER_ENABLED: false
@@ -139,7 +139,7 @@ services:
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
       DATABASE_NAME: dawarich_development
-      APPLICATION_HOSTS: "localhost,::1,127.0.0.1"
+      APPLICATION_HOSTS: "dawarich.${DOMAIN}"
       BACKGROUND_PROCESSING_CONCURRENCY: 10
       APPLICATION_PROTOCOL: http
       PROMETHEUS_EXPORTER_ENABLED: false
