--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -948,3 +948,16 @@ linked_repo = "compose_main"
 run_directory = "dawarich"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/dawarich-holmie.env"
+
+##
+
+[[stack]]
+name = "bettershift-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "bettershift-holmie"
+linked_repo = "compose_main"
+run_directory = "bettershift"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/bettershift-holmie.env"
