--- a/bettershift/compose.yaml
+++ b/bettershift/compose.yaml
@@ -4,6 +4,8 @@ services:
     image: ghcr.io/pantelx/bettershift:v2.1.0
     container_name: bettershift
     restart: unless-stopped
+    environment:
+      - BETTER_AUTH_SECRET=${BETTER_AUTH_SECRET}
     volumes:
       - /data/config_storage/bettershift/data:/app/data
     security_opt:
