--- a/filebrowserquantum/compose.yaml
+++ b/filebrowserquantum/compose.yaml
@@ -2,12 +2,10 @@
 services:
   filebrowser:
     volumes:
-      - /data:/srv/data
-      - /data/mnt:/srv/mounted
-      - /home:/srv/home
+      - /data/mnt/shows:/srv/mck
       - /data/config_storage/filebrowserquantum/config.yaml:/home/filebrowser/config.yaml
-#    ports:
-#      - 80:80
+    ports:
+      - 8080:80
     image: gtstef/filebrowser:1.2.0-beta
     environment:
       - FILEBROWSER_ADMIN_PASSWORD=${FILEBROWSER_ADMIN_PASSWORD}
@@ -25,7 +23,7 @@ services:
       - "traefik.http.routers.files-secure.rule=Host(`files.${DOMAIN}`)"
       - "traefik.http.routers.files-secure.tls=true"
       - "traefik.http.routers.files-secure.service=files"
-      - "traefik.http.services.files.loadbalancer.server.port=80"  # port of the service.
+      - "traefik.http.services.files.loadbalancer.server.port=8080"  # port of the service.
       - "traefik.docker.network=intranet"
       - "homepage.group=Media"
       - "homepage.name=files"
