--- a/filebrowserquantum/compose.yaml
+++ b/filebrowserquantum/compose.yaml
@@ -4,11 +4,14 @@ services:
     volumes:
       - /data/mnt/shows:/srv/mck
       - /data/config_storage/filebrowserquantum/config.yaml:/home/filebrowser/config.yaml
+      - /data/config_storage/filebrowserquantum/database.db:/home/filebrowser/database.db
     ports:
       - 8080:80
     image: gtstef/filebrowser:1.2.0-beta
     environment:
       - FILEBROWSER_ADMIN_PASSWORD=${FILEBROWSER_ADMIN_PASSWORD}
+      - FILEBROWSER_DATABASE=/home/filebrowser/database.db
+      - FILEBROWSER_CONFIG=/home/filebrowser/config.yaml
     security_opt:
       - no-new-privileges:true  # helps to increase security
     networks:
