--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -974,3 +974,16 @@ linked_repo = "compose_main"
 run_directory = "stirlingpdf"
 additional_env_files = ["/etc/komodo/domain.env"]
 env_file_path = "/etc/komodo/env/stirlingpdf-holmie.env"
+
+##
+
+[[stack]]
+name = "mqtt-holmie"
+tags = ["holmie", "criticality: 1"]
+[stack.config]
+server = "holmie"
+project_name = "mqtt-holmie"
+linked_repo = "compose_main"
+run_directory = "mqtt"
+additional_env_files = ["/etc/komodo/domain.env"]
+env_file_path = "/etc/komodo/env/mqtt-holmie.env"
