--- a/mqtt/compose.yaml
+++ b/mqtt/compose.yaml
@@ -5,7 +5,7 @@ services:
       - /data/config_storage/mqtt/config:/mosquitto/config
       - /data/config_storage/mqtt/data:/mosquitto/data
       - /data/config_storage/mqtt/log:/mosquitto/log
-      - /data/config_storage/komodo/etc_komodo/repos/compose_main/mqtt/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
+#      - /data/config_storage/komodo/etc_komodo/repos/compose_main/mqtt/mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
 #    ports:
 #        - '1883:1883'
     tty: true
