--- a/stirlingpdf/compose.yaml
+++ b/stirlingpdf/compose.yaml
@@ -9,6 +9,8 @@ services:
       - LANGS=en_GB
       - SHOW_SURVEY=false
       - SYSTEM_ENABLEANALYTICS=false
+    volumes:
+      - /data/config_storage/stirling-pdf:/configs
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true  # helps to increase security
