--- a/syncs/holmie.toml
+++ b/syncs/holmie.toml
@@ -13,7 +13,7 @@ env_file_path = "/etc/komodo/env/adsb.env"
 
 [[stack]]
 name = "audiobookshelf"
-tags = ["holmie", "criticality: 3", "external_hdd"]
+tags = ["holmie", "criticality: 3", "external_hdd", "media"]
 [stack.config]
 server = "holmie"
 project_name = "audiobookshelf"
@@ -26,7 +26,7 @@ env_file_path = "/etc/komodo/env/audiobookshelf.env"
 
 [[stack]]
 name = "filebrowser"
-tags = ["holmie", "criticality: 5"]
+tags = ["holmie", "criticality: 5", "media"]
 [stack.config]
 server = "holmie"
 project_name = "filebrowser"
@@ -39,7 +39,7 @@ env_file_path = "/etc/komodo/env/filebrowser.env"
 
 [[stack]]
 name = "freshrss-holmie"
-tags = ["holmie", "criticality: 2"]
+tags = ["holmie", "criticality: 2", "media"]
 [stack.config]
 server = "holmie"
 project_name = "freshrss-holmie"
@@ -65,7 +65,7 @@ env_file_path = "/etc/komodo/env/homeassistant.env"
 
 [[stack]]
 name = "immich"
-tags = ["holmie", "env", "criticality: 2", "external_hdd"]
+tags = ["holmie", "env", "criticality: 2", "external_hdd", "media"]
 [stack.config]
 server = "holmie"
 project_name = "immich"
@@ -78,7 +78,7 @@ env_file_path = "/etc/komodo/env/immich.env"
 
 [[stack]]
 name = "jellyfin"
-tags = ["holmie", "criticality: 2", "external_hdd"]
+tags = ["holmie", "criticality: 2", "external_hdd", "media"]
 [stack.config]
 server = "holmie"
 project_name = "jellyfin"
@@ -91,7 +91,7 @@ env_file_path = "/etc/komodo/env/jellyfin.env"
 
 [[stack]]
 name = "jellyseerr"
-tags = ["holmie", "criticality: 4"]
+tags = ["holmie", "criticality: 4", "media"]
 [stack.config]
 server = "holmie"
 project_name = "jellyseerr"
@@ -117,7 +117,7 @@ env_file_path = "/etc/komodo/env/kiwix.env"
 
 [[stack]]
 name = "navidrome"
-tags = ["holmie", "criticality: 4", "external_hdd"]
+tags = ["holmie", "criticality: 4", "external_hdd", "media"]
 [stack.config]
 server = "holmie"
 project_name = "navidrome"
@@ -544,7 +544,7 @@ env_file_path = "/etc/komodo/env/plex-holmie.env"
 
 [[stack]]
 name = "pinchflat-holmie"
-tags = ["holmie", "criticality: 5", "external_hdd"]
+tags = ["holmie", "criticality: 5", "external_hdd", "media"]
 [stack.config]
 server = "holmie"
 project_name = "pinchflat-holmie"
@@ -678,7 +678,7 @@ env_file_path = "/etc/komodo/env/gluetun-holmie.env"
 
 [[stack]]
 name = "qbittorrent-holmie"
-tags = ["holmie", "criticality: 2", "arr"]
+tags = ["holmie", "criticality: 2", "arr", "media"]
 [stack.config]
 server = "holmie"
 project_name = "qbittorrent-holmie"
@@ -759,7 +759,7 @@ env_file_path = "/etc/komodo/env/wireguard_vpn-holmie.env"
 
 [[stack]]
 name = "qui-holmie"
-tags = ["holmie", "criticality: 5", "arr"]
+tags = ["holmie", "criticality: 5", "arr", "media"]
 [stack.config]
 server = "holmie"
 project_name = "qui-holmie"
