--- a/frigate-notify/compose.yaml
+++ b/frigate-notify/compose.yaml
@@ -4,7 +4,6 @@ services:
     image: ghcr.io/0x2142/frigate-notify:v0.5.4
     environment:
       - TZ=America/New_York
-      - FN_CONFIGFILE= "/app/config/config.yml"
     volumes:
-      - /data/config_storage/frigate-notify/:/app/config/
+      - /data/config_storage/frigate-notify/config.yml:/app/config.yml
     restart: unless-stopped
