--- a/filebrowserquantum/compose.yaml
+++ b/filebrowserquantum/compose.yaml
@@ -2,7 +2,8 @@
 services:
   filebrowser:
     volumes:
-      - /data:/srv/data
+      - /data/mnt/shows:/srv/plex
+      - /data/config_storage:/srv/teacher:ro
       - /data/config_storage/filebrowserquantum/config.yaml:/home/filebrowser/config.yaml
       - /data/config_storage/filebrowserquantum/database.db:/home/filebrowser/database.db
     ports:
