--- a/filebrowserquantum/compose.yaml
+++ b/filebrowserquantum/compose.yaml
@@ -3,7 +3,7 @@ services:
   filebrowser:
     volumes:
       - /data/mnt/shows:/srv/plex
-      - /data/config_storage:/srv/data:ro
+      - /data/config_storage/all_mck:/srv/data:ro
       - /data/config_storage/filebrowserquantum/config.yaml:/home/filebrowser/config.yaml
       - /data/config_storage/filebrowserquantum/database.db:/home/filebrowser/database.db
     ports:
