--- a/filebrowserquantum/compose.yaml
+++ b/filebrowserquantum/compose.yaml
@@ -2,7 +2,7 @@
 services:
   filebrowser:
     volumes:
-      - /data/mnt/shows:/srv/plex
+      - /data/mnt/shows:/srv/data/plex
       - /data/config_storage/all_mck:/srv/data:ro
       - /data/config_storage/filebrowserquantum/config.yaml:/home/filebrowser/config.yaml
       - /data/config_storage/filebrowserquantum/database.db:/home/filebrowser/database.db
