--- a/filebrowserquantum/compose.yaml
+++ b/filebrowserquantum/compose.yaml
@@ -9,7 +9,7 @@ services:
     user: 1000:1000
     ports:
       - 8080:80
-    image: gtstef/filebrowser:1.2.1-beta
+    image: gtstef/filebrowser:v1.1.1-stable
     environment:
       - FILEBROWSER_ADMIN_PASSWORD=${FILEBROWSER_ADMIN_PASSWORD}
       - FILEBROWSER_DATABASE=/home/filebrowser/database.db
