--- a/syncs/procedure.toml
+++ b/syncs/procedure.toml
@@ -41,6 +41,13 @@ executions = [
   { execution.type = "DeployStack", execution.params.stack = "renovate", execution.params.services = [], enabled = true }
 ]
 
+[[procedure.config.stage]]
+name = "docker down"
+enabled = true
+executions = [
+  { execution.type = "DestroyStack", execution.params.stack = "renovate", execution.params.services = [], execution.params.remove_orphans = false, enabled = true }
+]
+
 ##
 
 [[procedure]]
