--- a/reactiveresume/compose.yaml
+++ b/reactiveresume/compose.yaml
@@ -7,12 +7,16 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql
+      - /data/config_storage/reactiveresume/postgres_data:/var/lib/postgresql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
       interval: 10s
       timeout: 5s
       retries: 10
+    security_opt:
+      - no-new-privileges:true  # helps to increase security
+    networks:
+      - intranet
 
   printer:
     image: ghcr.io/browserless/chromium:v2.39.0
@@ -23,34 +27,57 @@ services:
       - HEALTH=true
       - CONCURRENT=20
       - QUEUED=10
-      # Optional: Set a token for authentication
-      # - TOKEN=your-secret-token
+      - TOKEN=${TOKEN}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/pressure?token=your-secret-token"]
+      test: ["CMD", "curl", "-f", "https://resume.${DOMAIN}/pressure?token=${TOKEN}"]
       interval: 10s
       timeout: 5s
       retries: 10
+    security_opt:
+      - no-new-privileges:true  # helps to increase security
+    networks:
+      - intranet
 
   reactive-resume:
     image: amruthpillai/reactive-resume:v5.0.7
     restart: unless-stopped
     ports:
       - "3000:3000"
-    env_file:
-      - .env
+    environment:
+     - TZ="Etc/UTC"
+     - APP_URL="https://resume.${DOMAIN}"
+     - PRINTER_APP_URL="http://host.docker.internal:3000"
+     - PRINTER_ENDPOINT="ws://printer:3000"
+     - DATABASE_URL="postgresql://postgres:postgres@postgres:5432/postgres"
     volumes:
-      # Used when S3 is not configured; keeps uploads persistent
-      - ./data:/app/data
+      - /data/config_storage/reactiveresume/data:/app/data
     depends_on:
       postgres:
         condition: service_healthy
       printer:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ["CMD", "curl", "-f", "https://resume.${DOMAIN}/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
+    security_opt:
+      - no-new-privileges:true  # helps to increase security
+    networks:
+      - intranet
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.resume.entrypoints=http"
+      - "traefik.http.routers.resume.rule=Host(`resume.${DOMAIN}`)"
+      - "traefik.http.middlewares.resume-https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.resume.middlewares=resume-https-redirect"
+      - "traefik.http.routers.resume-secure.entrypoints=https"
+      - "traefik.http.routers.resume-secure.rule=Host(`resume.${DOMAIN}`)"
+      - "traefik.http.routers.resume-secure.tls=true"
+      - "traefik.http.routers.resume-secure.service=resume"
+      - "traefik.http.services.resume.loadbalancer.server.port=3000"  # port of the service.
+      - "traefik.docker.network=intranet"
 
-volumes:
-  postgres_data:
+networks:
+  intranet:
+    external: true
